# thebrain

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-miner  Dockerfile-validator  Node-Readme.md  Node-setup.md  README.md  downloaded_file  incentives.md  lightnode-deployment.yaml  minner-setup.md  node-setup.yml  readme_weights.md  rust-toolchain.toml  validator-setup.md
.github/workflows/: build.yml  dev-deploy.yml  docker-build-test.yml
client/evm-tracing/: Cargo.toml
client/rpc-core/node-metrics/: Cargo.toml
client/rpc-core/node-metrics/src/: lib.rs
client/rpc-core/node-metrics/src/types/: mod.rs
client/rpc/docker-registry/: Cargo.toml
client/rpc/docker-registry/src/: lib.rs
client/rpc/weights/: Cargo.toml
client/rpc/weights/src/: lib.rs
contracts/bridge/: .gitignore  Cargo.toml  lib.rs  spec.md
contracts/bridge/integration-tests/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
contracts/bridge/integration-tests/.papi/: polkadot-api.json
contracts/bridge/integration-tests/.papi/contracts/: bridge.json
contracts/bridge/integration-tests/.papi/descriptors/: package.json
contracts/bridge/integration-tests/.papi/metadata/: devnet.scale
contracts/bridge/integration-tests/patches/: @polkadot-api+sdk-ink+0.4.0.patch
contracts/bridge/integration-tests/src/: setup.ts  utils.ts
contracts/bridge/integration-tests/src/tests/: bridge.integration.test.ts
contracts/bridge/integration-tests/src/utils/: stake-helpers.ts
contracts/bridge/src/: chain_extension.rs  errors.rs  events.rs  lib.rs  runtime.rs  types.rs
evm-tracer/: Cargo.toml
evm-tracer/src/: lib.rs
node/: Cargo.toml
node/src/: benchmarking.rs  cli.rs  command.rs  eth.rs  lib.rs  main.rs  mainnet_fixtures.rs  manual_seal.rs  service.rs  testnet_fixtures.rs  utils.rs
node/src/chainspec/: hippius_mainnet_runtime.compact.compressed.wasm  mainnet.rs  mod.rs  runtime.wasm  runtime.wasm.zstd  testnet.rs
node/src/rpc/: eth.rs  mod.rs  tracing.rs
pallets/account-profile/: Cargo.toml
pallets/account-profile/src/: lib.rs  mock.rs  tests.rs
pallets/alpha-bridge/: Cargo.toml
pallets/alpha-bridge/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/alpha-bridge/src/migrations/: mod.rs  v1.rs
pallets/arion-pallet/: Cargo.toml  README.md
pallets/arion-pallet/src/: lib.rs  weights.rs
pallets/backup/: Cargo.toml  README.md
pallets/backup/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/bittensor/: Cargo.toml  README.md
pallets/bittensor/src/: benchmarking.rs  lib.rs  sample.txt
pallets/calendar/: Cargo.toml
pallets/calendar/src/: calendar.rs  lib.rs  mock.rs  tests.rs
pallets/ceph/: Cargo.toml
pallets/ceph/src/: lib.rs  types.rs
pallets/compute/: Cargo.toml  README.md
pallets/containerRegistry/: Cargo.toml
pallets/containerRegistry/src/: lib.rs  types.rs
pallets/credits/: Cargo.toml  README.md
pallets/credits/src/: lib.rs  migrations.rs  mock.rs  tests.rs  types.rs
pallets/execution-unit/: Cargo.toml  Readme.md
pallets/execution-unit/src/: lib.rs  system_info.rs  types.rs  weight_calculation.rs  weights.rs
pallets/ip/: Cargo.toml
pallets/ipfs/: Cargo.toml
pallets/ipfs-pallet-new/: Cargo.toml
pallets/ipfs-pin/: Cargo.toml  README.md
pallets/ipfs-pin/src/: lib.rs  types.rs
pallets/ipfs/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/marketplace/: Cargo.toml  Readme.md
pallets/marketplace/src/: abc.rs  events.rs  lib.rs  migrations.rs  mock.rs  storage.rs  types.rs
pallets/metagraph/: Cargo.toml  README.md
pallets/metagraph/src/: dividends.rs  finney.rs  hotkeys.rs  lib.rs  mock.rs  tests.rs  types.rs  utils.rs
pallets/notifications/: Cargo.toml  README.md
pallets/notifications/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/proxy/: Cargo.toml
pallets/ranking/: Cargo.toml  README.md
pallets/ranking/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/registration/: Cargo.toml  README.md
pallets/registration/src/: lib.rs  migrations.rs  mock.rs  tests.rs  types.rs
pallets/staking/: Cargo.toml
pallets/staking/reward-curve/: Cargo.toml
pallets/staking/reward-curve/src/: lib.rs  log.rs
pallets/staking/reward-curve/tests/: test.rs
pallets/staking/reward-fn/: Cargo.toml
pallets/staking/reward-fn/src/: lib.rs
pallets/staking/reward-fn/tests/: test.rs
pallets/staking/runtime-api/: Cargo.toml
pallets/staking/runtime-api/src/: lib.rs
pallets/staking/src/: benchmarking.rs  election_size_tracker.rs  inflation.rs  ledger.rs  lib.rs  migrations.rs  mock.rs  slashing.rs  testing_utils.rs  tests.rs  weights.rs
pallets/staking/src/pallet/: impls.rs  mod.rs
pallets/storage/: Cargo.toml
pallets/storage-s3/: Cargo.toml
pallets/storage-s3/src/: lib.rs
pallets/subAccounts/: Cargo.toml  README.md
pallets/subAccounts/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/utils/: Cargo.toml
pallets/utils/src/: http_utils.rs  lib.rs  signing.rs
precompiles/: README.md
precompiles/account-profile/: AccountProfile.sol  Cargo.toml
precompiles/account-profile/src/: lib.rs
precompiles/assets-erc20/: Cargo.toml
precompiles/balances-erc20/: Cargo.toml  Permit.sol
precompiles/batch/: Batch.sol  Cargo.toml
precompiles/call-permit/: CallPermit.sol  Cargo.toml
precompiles/ipfs-pin/: Cargo.toml  Ipfs.sol
precompiles/ipfs-pin/src/: lib.rs
precompiles/marketplace/: Cargo.toml  marketplace.sol
precompiles/notifications/: Cargo.toml  Notifications.sol
precompiles/pallet-democracy/: Cargo.toml  DemocracyInterface.sol
precompiles/precompile-registry/: Cargo.toml  PrecompileRegistry.sol
primitives/: Cargo.toml
storage-script/: index.js  package-lock.json  package.json  set_ips.js
vali-weights-submitter/: README.md  config.yaml  fix_ssl.py  mnemonic_wallet_helper.py  requirements.txt  run_continuous.py  setup_env.sh  setup_wallet.py  sync_metagraph.py  weight_submitter.py  weight_submitter_ss58_only.py
workflows/: docker-build-test.yml  release.yml
(+151 files in other folders)
