[package]
name = "pallet-alpha-bridge"
description = "Alpha Bridge Pallet for Cross-Chain Token Transfers"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [ "derive", ], workspace = true }
scale-info = { features = [ "derive", ], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
log = { version = "0.4.22", default-features = false }

[dev-dependencies]
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-ip = { workspace = true, default-features = false }
sp-keyring = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
	"sp-core/std",
    "pallet-balances/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
