[package]
name = "pallet-arion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system  = { workspace = true, default-features = false }
sp-runtime    = { workspace = true, default-features = false }
sp-std        = { workspace = true, default-features = false }
sp-core       = { workspace = true, default-features = false }
pallet-registration = { workspace = true, default-features = false }
pallet-proxy = { workspace = true, default-features = false }

codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "pallet-registration/std",
  "pallet-proxy/std",
  "codec/std",
  "scale-info/std",
]