[package]
name = "pallet-backup"
description = "pallet for managing backup and recovery mechanisms."
version = "0.1.0"
license = "MIT"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sp-std = { default-features = false, workspace = true }
log = { workspace = true }
pallet-marketplace = { workspace = true, default-features = false }
pallet-utils = { default-features = false, workspace = true }	
pallet-registration = { default-features = false, workspace = true }
pallet-compute = { workspace = true, default-features = false }
sp-runtime = { default-features = false, workspace = true }
serde_json = { version = "1.0.127", default-features = false }
sp-io = { default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
ipfs-pallet = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-marketplace/std",
	"pallet-utils/std",
	"pallet-registration/std",
	"pallet-compute/std",
	"sp-runtime/std",
	"serde_json/std",
	"sp-io/std",
	"sp-core/std",
	"ipfs-pallet/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
