[package]
name = "pallet-rankings"
description = "Pallet for managing user rankings in the Hippius network."
version = "0.1.0"
license = "MIT"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
sp-std = { default-features = false, workspace = true }
frame-benchmarking = { optional = true, workspace = true }
sp-staking = { features = ["serde"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-metagraph = { default-features = false, workspace = true }
log = { version = "0.4.22", default-features = false }
sp-core = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
pallet-registration = { default-features = false, workspace = true }
pallet-staking = { workspace = true }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
sp-core = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
pallet-utils = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-metagraph/std",
	"log/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"pallet-registration/std",
	"pallet-balances/std",
	"serde/std",
	"pallet-staking/std",
	"sp-staking/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
